Cleanup statusbar styling to ensure items are centered and do not overflow area.

--- a/ui/ninezone/src/ui-ninezone/footer/Indicator.scss
+++ b/ui/ninezone/src/ui-ninezone/footer/Indicator.scss
@@ -11,8 +11,6 @@
   align-items: center;
   color: $buic-text-color;
   font-size: $text-font-size;
-  padding-top: $nz-footer-indicator-vertical-padding;
-  padding-bottom: $nz-footer-indicator-vertical-padding;
   box-sizing: border-box;
 
   .nz-icon-padding-left {
